[package]
name = "llama2-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = { version = "1.16.0", optional = true }
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = { version = "1.7.0", optional = true }
true = { version = "0.1.0", optional = true }


[profile.release]
panic = "abort"


[features]
parallel = ["dep:rayon", "dep:num_cpus"]
